# codex-weave

./: .gitignore  AGENTS.md  README.md
codex-cli/: package-lock.json  package.json
codex-rs/: Cargo.toml
codex-rs/.cargo-root/: .crates.toml  .crates2.json
codex-rs/cli/src/: main.rs
codex-rs/codex-api/src/requests/: headers.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: client.rs  codex.rs  default_client.rs  features.rs  lib.rs  stream_events_utils.rs  thread_manager.rs
codex-rs/core/src/agent/: control.rs
codex-rs/core/src/agent_mentions/: injection.rs  mod.rs
codex-rs/core/src/config/: edit.rs  mod.rs  types.rs
codex-rs/core/src/rollout/: policy.rs
codex-rs/core/src/state/: turn.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/protocol/src/: lib.rs  models.rs  protocol.rs  user_input.rs  weave.rs
codex-rs/tui/: Cargo.toml  tooltips.txt
codex-rs/tui/src/: app.rs  app_event.rs  app_event_sender.rs  chatwidget.rs  custom_terminal.rs  history_cell.rs  lib.rs  session_log.rs  slash_command.rs  tui.rs  update_action.rs  updates.rs  weave_client.rs
codex-rs/tui2/: Cargo.toml
codex-rs/tui2/src/: app.rs  app_event.rs  chatwidget.rs  history_cell.rs  lib.rs  slash_command.rs  updates.rs  weave_client.rs
codex-rs/weave-client/: Cargo.toml
codex-rs/weave-client/src/: lib.rs
codex-rs/weave-runtime/: Cargo.toml
codex-rs/weave-runtime/src/: lib.rs
codex-rs/weave-transport-uds/src/: lib.rs
docs/: slash_commands.md
docs/weave/: README.md  protocol.md  todo.md
(+68 files in other folders)
